Prevent Content Layout Shift
See https://web.dev/optimize-cls/

--- a/src/posts/21-06-18-homeServerEvolutionStoneAge/homeServerEvolutionStoneAge.module.scss
+++ b/src/posts/21-06-18-homeServerEvolutionStoneAge/homeServerEvolutionStoneAge.module.scss
@@ -10,6 +10,7 @@
 
   .hero {
     width: 100%;
+    height: auto;
   }
 
   .listDisc {
